[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project]
name = "y"
version = "y"
description = "CLI for proxying cedh decks with makeplayingcards.com"
authors = [
    {name = "Zane Dufour", email = "znd4@pm.me"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.1",
]
dev = [
    "towncrier>=19.2",
    "parver>=0.3",
]

doc = [
    "mkdocs>=1.1",
    "mkdocs-material>=6.2",
]

[tool.pdm.scripts]
release = "python -m tasks.release"
test = "pytest tests/"
doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}
lint = "pre-commit run --all-files"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]

[tool.ruff]
line-length = 100
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
extend-exclude = ["tests/fixtures"]
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["cedh_proxy"]

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
namespace_packages = true
mypy_path = "src"
explicit_package_bases = true

[tool.towncrier]
package = "cedh_proxy"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/znd4/cedh-proxy/issues/{issue})"
directory = "news/"
start_string = "<!-- insertion marker -->"
title_format = "[v{version}](https://github.com/znd4/cedh-proxy/releases/tag/{version}) ({project_date})"
template = "news/towncrier_template.md"
underlines = "-~^"

[[tool.towncrier.type]]
directory = "feature"
name = "Features & Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dep"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellany"
showcontent = true

[tool.isort]
profile = "black"
atomic = true
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = ["cedh_proxy"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]
